linking and editing

--- a/electronics.html
+++ b/electronics.html
@@ -19,8 +19,8 @@
   </head>
   
   <body class="productPage">  
-    <!-- wpf loader Two -->
 
+    <!-- wpf Loader Two -->
     <div id="wpf-loader-two">          
       <div class="wpf-loader-two-inner">
         <span>Loading</span>
@@ -30,26 +30,19 @@
     <!-- SCROLL TOP BUTTON -->
     <a class="scrollToTop" href="#"><i class="fa fa-chevron-up"></i></a>
 
-
-
-    <!-- Start header section -->
+    <!-- Start Header Section -->
     <header id="aa-header">
-
-      <!-- start header bottom  -->
       <div class="aa-header-bottom">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
               <div class="aa-header-bottom-area">
-                <!-- logo  -->
                 <div class="aa-logo">
                   <a href="index.html">
                     <span class="fa fa-shopping-cart"></span>
                     <p>College<strong>Adda</strong> <span>Yeh Hai College ki Dukaan!</span></p>
                   </a>
                 </div>
-
-                <!-- search box -->
                 <div class="aa-search-box">
                   <form action="">
                     <input type="text" name="" id="" placeholder="Search Here! ">
@@ -63,12 +56,10 @@
       </div>
     </header>
 
-    <!-- menu -->
+    <!-- Menu -->
     <section id="menu">
       <div class="container">
         <div class="menu-area">
-          
-          <!-- Navbar -->
           <div class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -81,13 +72,13 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Stationaries </a></li>
-                <li><a href="#">Electronics </a></li>
-                <li><a href="#">Hostel/PG Rooms </a></li>
-                <li><a href="#">Others </a></li>           
+                <li><a href="stationaries.html">Stationaries </a></li>
+                <li><a href="electronics.html">Electronics </a></li>
+                <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
+                <li><a href="others.html">Others </a></li>           
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Login </a></li>
-                <li><a href="#">Sell/Donate </a></li>
+                <li><a href="login.html">Login </a></li>
+                <li><a href="selldonate.html">Sell/Donate </a></li>
               </ul>
             </div>
           </div>
@@ -95,19 +86,12 @@
       </div>
     </section>
    
-    <!-- catg header banner section -->
+    <!-- Catg Header Banner Section -->
     <section id="aa-catg-head-banner">
       <img src="img/electronicsbanner.jpg" alt="fashion img">
-      <!-- <div class="aa-catg-head-banner-area">
-        <div class="container">
-          <div class="aa-catg-head-banner-content">
-            <h2>Electronics</h2>
-          </div>
-        </div>
-      </div> -->
     </section>
 
-    <!-- product category -->
+    <!-- Product Category -->
     <section id="aa-product-category">
       <div class="container">
         <div class="row">
@@ -123,10 +107,10 @@
                 <ul class="list aa-product-catg">
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/electronics/asusmobile.jpg" alt="asus img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/asusmobile.html"><img src="img/electronics/asusmobile.jpg" alt="asus img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Asus Zenfone Max Pro</a></h4>
+                        <h4 class="aa-product-title"><a href="products/asusmobile.html">Asus Zenfone Max Pro</a></h4>
                         <span class="aa-product-price">Rs. 5000</span>
                         <p class="aa-product-descrip">The ASUS Zenfone Max Pro has everything to keep you entertained and connected. It is of mettalic blue in colour.</p>
                         <p class="aa-product-descrip">Expect Delivery in 1.5 Days</p>
@@ -135,10 +119,10 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/electronics/boat.jpg" alt="headphones img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/boatheadphones.html"><img src="img/electronics/boat.jpg" alt="headphones img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Boat Rockerz 400 Headphones</a></h4>
+                        <h4 class="aa-product-title"><a href="products/boatheadphones.html">Boat Rockerz 400 Headphones</a></h4>
                         <span class="aa-product-price">Rs. 250</span>
                         <p class="aa-product-descrip">Now just stop worrying about wires hanging from here and there. Wired is passé. Connect with any Bluetooth device, connect and play. Plug into nirvana.</p>
                         <p class="aa-product-descrip">Expect Delivery in 1 Day</p>
@@ -147,10 +131,10 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/electronics/lenovolaptop.jpg" alt="laptop img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/lenovolaptop.html"><img src="img/electronics/lenovolaptop.jpg" alt="laptop img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lenovo IdeaPad</a></h4>
+                        <h4 class="aa-product-title"><a href="products/lenovolaptop.html">Lenovo IdeaPad</a></h4>
                         <span class="aa-product-price">Rs. 20,000</span>
                         <p class="aa-product-descrip">Sometimes it’s best to keep things simple. Stacked with premium processing and advanced graphics options, the Idea Pad 330 is as powerful as it is easy to use.</p>
                         <p class="aa-product-descrip">Expect Delivery in 3 Days</p>
@@ -159,10 +143,10 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/electronics/motomobile.jpg" alt="mobile img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/motomobile.html"><img src="img/electronics/motomobile.jpg" alt="mobile img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Moto G</a></h4>
+                        <h4 class="aa-product-title"><a href="products/motomobile.html">Moto G</a></h4>
                         <span class="aa-product-price">Rs. 3000</span>
                         <p class="aa-product-descrip">Say hello to Moto G6. Easy to handle and use. Having powerful processors and long battery-life gives enthusiasm and give relief from spontaneous charging. It is designed with you in mind!</p>
                         <p class="aa-product-descrip">Expect Delivery in 1.5 Days</p>
@@ -178,10 +162,10 @@
               <div class="aa-sidebar-widget">
                 <h3>Category</h3>
                 <ul class="aa-catg-nav">
-                  <li><a href="#">Stationaries</a></li>
-                  <li><a href="">Electronics</a></li>
-                  <li><a href="">Hostel/PG Rooms</a></li>
-                  <li><a href="">Others</a></li>
+                  <li><a href="stationaries.html">Stationaries</a></li>
+                  <li><a href="electronics.html">Electronics</a></li>
+                  <li><a href="hostelpgrooms.html">Hostel/PG Rooms</a></li>
+                  <li><a href="others.html">Others</a></li>
                 </ul>
               </div>
             </aside>
@@ -190,14 +174,14 @@
       </div>
     </section>
 
-    <!-- Subscribe section -->
+    <!-- Subscribe Section -->
     <section id="aa-subscribe">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="aa-subscribe-area">
               <h3>Subscribe to College Magazine </h3>
-              <p>Proud to collaborate with PU!</p>
+              <p>Proud to Collaborate with PU!</p>
               <form action="" class="aa-subscribe-form">
                 <input type="email" name="" id="" placeholder="Enter your Email">
                 <input type="submit" value="Subscribe">
@@ -220,10 +204,10 @@
                     <div class="aa-footer-widget">
                       <h3>Main Menu</h3>
                       <ul class="aa-footer-nav">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Our Products</a></li>
-                        <li><a href="#">Donate Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="electronics.html">Our Products</a></li>
+                        <li><a href="selldonate.html">Donate Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
                   </div>
@@ -240,7 +224,7 @@
                           <a href="#"><span class="fa fa-facebook"></span></a>
                           <a href="#"><span class="fa fa-twitter"></span></a>
                           <a href="#"><span class="fa fa-google-plus"></span></a>
-                          <a href="#"><span class="fa fa-youtube"></span></a>
+                          <a href="#"><span class="fa fa-instagram"></span></a>
                         </div>
                       </div>
                     </div>
@@ -281,6 +265,5 @@
     <script type="text/javascript" src="js/slick.js"></script>
     <script type="text/javascript" src="js/nouislider.js"></script>
     <script src="js/custom.js"></script> 
-  
   </body>
 </html>
