--- a/stationaries.html
+++ b/stationaries.html
@@ -18,9 +18,9 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   </head>
   
-  <body class="productPage">  
-    <!-- wpf loader Two -->
+  <body class="productPage"> 
 
+    <!-- wpf Loader Two -->
     <div id="wpf-loader-two">          
       <div class="wpf-loader-two-inner">
         <span>Loading</span>
@@ -30,26 +30,19 @@
     <!-- SCROLL TOP BUTTON -->
     <a class="scrollToTop" href="#"><i class="fa fa-chevron-up"></i></a>
 
-
-
-    <!-- Start header section -->
+    <!-- Start Header Section -->
     <header id="aa-header">
-
-      <!-- start header bottom  -->
       <div class="aa-header-bottom">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
               <div class="aa-header-bottom-area">
-                <!-- logo  -->
                 <div class="aa-logo">
                   <a href="index.html">
                     <span class="fa fa-shopping-cart"></span>
                     <p>College<strong>Adda</strong> <span>Yeh Hai College ki Dukaan!</span></p>
                   </a>
                 </div>
-
-                <!-- search box -->
                 <div class="aa-search-box">
                   <form action="">
                     <input type="text" name="" id="" placeholder="Search Here! ">
@@ -63,12 +56,10 @@
       </div>
     </header>
 
-    <!-- menu -->
+    <!-- Menu -->
     <section id="menu">
       <div class="container">
         <div class="menu-area">
-          
-          <!-- Navbar -->
           <div class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -81,13 +72,13 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Stationaries </a></li>
-                <li><a href="#">Electronics </a></li>
-                <li><a href="#">Hostel/PG Rooms </a></li>
-                <li><a href="#">Others </a></li>         
+                <li><a href="stationaries.html">Stationaries </a></li>
+                <li><a href="electronics.html">Electronics </a></li>
+                <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
+                <li><a href="others.html">Others </a></li>         
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Login </a></li>
-                <li><a href="#">Sell/Donate </a></li>
+                <li><a href="login.html">Login </a></li>
+                <li><a href="selldonate.html">Sell/Donate </a></li>
               </ul>
             </div>
           </div>
@@ -95,19 +86,12 @@
       </div>
     </section>
    
-    <!-- catg header banner section -->
+    <!-- Catg Header Banner Section -->
     <section id="aa-catg-head-banner">
       <img src="img/stationeriesbanner.jpg" alt="banner img">
-      <!-- <div class="aa-catg-head-banner-area">
-        <div class="container">
-          <div class="aa-catg-head-banner-content">
-            <h2>Stationaries</h2>
-          </div>
-        </div>
-      </div> -->
     </section>
 
-    <!-- product category -->
+    <!-- Product Category -->
     <section id="aa-product-category">
       <div class="container">
         <div class="row">
@@ -123,10 +107,10 @@
                 <ul class="list aa-product-catg">
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/stationaries/bsgrewal.jpg" alt="bsgrewal img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/bsgrewal.html"><img src="img/stationaries/bsgrewal.jpg" alt="bsgrewal img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Engineering Mathematics by B.S. Grewal</a></h4>
+                        <h4 class="aa-product-title"><a href="products/bsgrewal.html">Engineering Mathematics by B.S. Grewal</a></h4>
                         <span class="aa-product-price">Rs. 450</span>
                         <p class="aa-product-descrip">One of the best books for Engineering Mathematics by an Indian Author. It covers various topics regarding mathematics with a great ease.</p>
                         <p class="aa-product-descrip">Expect Delivery in 12 hrs.</p>
@@ -135,10 +119,10 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/stationaries/c++.jpg" alt="c++ img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/c++.html"><img src="img/stationaries/c++.jpg" alt="c++ img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">OOPS by E. Balaguruswamy</a></h4>
+                        <h4 class="aa-product-title"><a href="products/c++.html">OOPS by E. Balaguruswamy</a></h4>
                         <span class="aa-product-price">Rs. 150</span>
                         <p class="aa-product-descrip">One of the  most popular books of OOPs concept with C++. Author uses simple language for better understanding for engineering students</p>
                         <p class="aa-product-descrip">Expect Delivery in 12 hrs.</p>
@@ -147,10 +131,10 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/stationaries/catalysisnotes.jpg" alt="notes img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/catalysisnotes.html"><img src="img/stationaries/catalysisnotes.jpg" alt="notes img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Catalysis Notes</a></h4>
+                        <h4 class="aa-product-title"><a href="products/catalysisnotes.html">Catalysis Notes</a></h4>
                         <span class="aa-product-price">Rs. 15</span>
                         <p class="aa-product-descrip">These notes provides the core knowledge of Catalysis and one can guarantee good marks by just reading these notes.</p>
                         <p class="aa-product-descrip">Expect Delivery in 6 hrs.</p>
@@ -159,10 +143,10 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/stationaries/chempracticalmanual.jpg" alt="manual img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/chempracticalmanual.html"><img src="img/stationaries/chempracticalmanual.jpg" alt="manual img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Chemistry Practical Manual</a></h4>
+                        <h4 class="aa-product-title"><a href="products/chempracticalmanual.html">Chemistry Practical Manual</a></h4>
                         <span class="aa-product-price">Rs. 25</span>
                         <p class="aa-product-descrip">The Manual contains various experiments with their viva questions giving complete knowledge in Applied Chemistry.</p>
                         <p class="aa-product-descrip">Expect Delivery in 6 hrs.</p>
@@ -171,10 +155,10 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/stationaries/digitaldesign.jpg" alt="digitaldesign img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/digitaldesign.html"><img src="img/stationaries/digitaldesign.jpg" alt="digitaldesign img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Digital Design</a></h4>
+                        <h4 class="aa-product-title"><a href="products/digitaldesign.html">Digital Design</a></h4>
                         <span class="aa-product-price">Rs. 150</span>
                         <p class="aa-product-descrip">This book is written by our own College Professor Dr. Gurpreet Singh Bains in which he uses simple language and numerous examples for understanding the core concept of Digital Electronics.</p>
                         <p class="aa-product-descrip">Expect Delivery in 12 hrs.</p>
@@ -183,10 +167,10 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/stationaries/icse.jpg" alt="icse img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/icse.html"><img src="img/stationaries/icse.jpg" alt="icse img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Computer Fundamentals</a></h4>
+                        <h4 class="aa-product-title"><a href="products/icse.html">Computer Fundamentals</a></h4>
                         <span class="aa-product-price">Rs. 150</span>
                         <p class="aa-product-descrip">One of the most important book for the newcomers to the Computer Science & Engineering, which give a glimpse of B.E. Degree by providing basic knowledge of every subjects that will be covered in 4 years.</p>
                         <p class="aa-product-descrip">Expect Delivery in 12 hrs.</p>
@@ -195,10 +179,10 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/stationaries/polymersnotes.jpg" alt="notes img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/polymernotes.html"><img src="img/stationaries/polymersnotes.jpg" alt="notes img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Polymers Notes</a></h4>
+                        <h4 class="aa-product-title"><a href="products/polymernotes.html">Polymers Notes</a></h4>
                         <span class="aa-product-price">Rs. 13</span>
                         <p class="aa-product-descrip">These notes provides the core knowledge of Polymers and their preparations and uses and one can guarantee good marks by just reading these notes.</p>
                         <p class="aa-product-descrip">Expect Delivery in 6 hrs.</p>
@@ -207,10 +191,10 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/stationaries/uvnotes.jpg" alt="notes img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="products/uvnotes.html"><img src="img/stationaries/uvnotes.jpg" alt="notes img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">UV-VIS Notes</a></h4>
+                        <h4 class="aa-product-title"><a href="products/uvnotes.html">UV-VIS Notes</a></h4>
                         <span class="aa-product-price">Rs. 13</span>
                         <p class="aa-product-descrip">These notes provides the basic knowledge of UV-VIS Spectroscopy and one can guarantee good marks by just reading these notes.</p>
                         <p class="aa-product-descrip">Expect Delivery in 6 hrs.</p>
@@ -226,10 +210,10 @@
               <div class="aa-sidebar-widget">
                 <h3>Category</h3>
                 <ul class="aa-catg-nav">
-                  <li><a href="#">Stationaries</a></li>
-                  <li><a href="">Electronics</a></li>
-                  <li><a href="">Hostel/PG Rooms</a></li>
-                  <li><a href="">Others</a></li>
+                  <li><a href="stationaries.html">Stationaries</a></li>
+                  <li><a href="electronics.html">Electronics</a></li>
+                  <li><a href="hostelpgrooms.html">Hostel/PG Rooms</a></li>
+                  <li><a href="others.html">Others</a></li>
                 </ul>
               </div>
             </aside>
@@ -238,14 +222,14 @@
       </div>
     </section>
 
-    <!-- Subscribe section -->
+    <!-- Subscribe Section -->
     <section id="aa-subscribe">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="aa-subscribe-area">
               <h3>Subscribe to College Magazine </h3>
-              <p>Proud to collaborate with PU!</p>
+              <p>Proud to Collaborate with PU!</p>
               <form action="" class="aa-subscribe-form">
                 <input type="email" name="" id="" placeholder="Enter your Email">
                 <input type="submit" value="Subscribe">
@@ -256,7 +240,7 @@
       </div>
     </section>
 
-    <!-- footer -->  
+    <!-- Footer -->  
     <footer id="aa-footer">
       <div class="aa-footer-top">
         <div class="container">
@@ -268,10 +252,10 @@
                     <div class="aa-footer-widget">
                       <h3>Main Menu</h3>
                       <ul class="aa-footer-nav">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Our Products</a></li>
-                        <li><a href="#">Donate Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="stationaries.html">Our Products</a></li>
+                        <li><a href="selldonate.html">Donate Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
                   </div>
@@ -280,15 +264,15 @@
                       <div class="aa-footer-widget">
                         <h3>Contact Us</h3>
                         <address>
-                        <p> PUSSGRC, Hoshiarpur, India</p>
-                        <p><span class="fa fa-phone"></span>+91-1234567890</p>
-                        <p><span class="fa fa-envelope"></span>collegeadda@gmail.com</p>
+                          <p> PUSSGRC, Hoshiarpur, India</p>
+                          <p><span class="fa fa-phone"></span>+91-1234567890</p>
+                          <p><span class="fa fa-envelope"></span>collegeadda@gmail.com</p>
                         </address>
                         <div class="aa-footer-social">
                           <a href="#"><span class="fa fa-facebook"></span></a>
                           <a href="#"><span class="fa fa-twitter"></span></a>
                           <a href="#"><span class="fa fa-google-plus"></span></a>
-                          <a href="#"><span class="fa fa-youtube"></span></a>
+                          <a href="#"><span class="fa fa-instagram"></span></a>
                         </div>
                       </div>
                     </div>
@@ -329,6 +313,5 @@
     <script type="text/javascript" src="js/slick.js"></script>
     <script type="text/javascript" src="js/nouislider.js"></script>
     <script src="js/custom.js"></script> 
-  
   </body>
 </html>
