--- a/hostelpgrooms.html
+++ b/hostelpgrooms.html
@@ -19,8 +19,8 @@
   </head>
   
   <body class="productPage">  
-    <!-- wpf loader Two -->
-
+    
+    <!-- wpf Loader Two -->
     <div id="wpf-loader-two">          
       <div class="wpf-loader-two-inner">
         <span>Loading</span>
@@ -30,26 +30,19 @@
     <!-- SCROLL TOP BUTTON -->
     <a class="scrollToTop" href="#"><i class="fa fa-chevron-up"></i></a>
 
-
-
-    <!-- Start header section -->
+    <!-- Start Header Section -->
     <header id="aa-header">
-
-      <!-- start header bottom  -->
       <div class="aa-header-bottom">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
               <div class="aa-header-bottom-area">
-                <!-- logo  -->
                 <div class="aa-logo">
                   <a href="index.html">
                     <span class="fa fa-shopping-cart"></span>
                     <p>College<strong>Adda</strong> <span>Yeh Hai College ki Dukaan!</span></p>
                   </a>
                 </div>
-
-                <!-- search box -->
                 <div class="aa-search-box">
                   <form action="">
                     <input type="text" name="" id="" placeholder="Search Here! ">
@@ -63,12 +56,10 @@
       </div>
     </header>
 
-    <!-- menu -->
+    <!-- Menu -->
     <section id="menu">
       <div class="container">
         <div class="menu-area">
-          
-          <!-- Navbar -->
           <div class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -81,13 +72,13 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Stationaries </a></li>
-                <li><a href="#">Electronics </a></li>
-                <li><a href="#">Hostel/PG Rooms </a></li>
-                <li><a href="#">Others </a></li>           
+                <li><a href="stationaries.html">Stationaries </a></li>
+                <li><a href="electronics.html">Electronics </a></li>
+                <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
+                <li><a href="others.html">Others </a></li>           
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Login </a></li>
-                <li><a href="#">Sell/Donate </a></li>
+                <li><a href="login.html">Login </a></li>
+                <li><a href="selldonate.html">Sell/Donate </a></li>
               </ul>
             </div>
           </div>
@@ -95,19 +86,12 @@
       </div>
     </section>
    
-    <!-- catg header banner section -->
+    <!-- Catg Header Banner Section -->
     <section id="aa-catg-head-banner">
       <img src="img/roomsbanner.jpg" alt="fashion img">
-      <!-- <div class="aa-catg-head-banner-area">
-        <div class="container">
-          <div class="aa-catg-head-banner-content">
-            <h2>Hostel/PG Rooms</h2>
-          </div>
-        </div>
-      </div> -->
     </section>
 
-    <!-- product category -->
+    <!-- Product Category -->
     <section id="aa-product-category">
       <div class="container">
         <div class="row">
@@ -123,52 +107,52 @@
                 <ul class="list aa-product-catg">
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/rooms/shivalik.jpg" alt="pg img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
+                      <a class="aa-product-img" href="products/shivalikpg.html"><img src="img/rooms/shivalik.jpg" alt="pg img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Shivalik PG</a></h4>
+                        <h4 class="aa-product-title"><a href="products/shivalikpg.html">Shivalik PG</a></h4>
                         <span class="aa-product-price">Rs. 4900/month</span>
                         <p class="aa-product-descrip">Allahabad, Bajwara, Nandan, Hoshiarpur, Punjab 146021</p>
                         <p class="aa-product-descrip">Rating by Google Users
-                        <div class="aa-product-rating">
-                          4.2  
-                          <span class="fa fa-star"></span>
-                          <span class="fa fa-star"></span>
-                          <span class="fa fa-star"></span>
-                          <span class="fa fa-star"></span>
-                          <span class="fa fa-star-o"></span>
-                        </div>
+                          <div class="aa-product-rating">
+                            4.2  
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star-o"></span>
+                          </div>
                         </p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/rooms/saharapg.jpg" alt="pg img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
+                      <a class="aa-product-img" href="products/saharapg.html"><img src="img/rooms/saharapg.jpg" alt="pg img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Sahara PG</a></h4>
+                        <h4 class="aa-product-title"><a href="products/saharapg.html">Sahara PG</a></h4>
                         <span class="aa-product-price">Rs. 5500/month</span>
                         <p class="aa-product-descrip">Main Una Road, Nandan Bajwara Road, Nandan, Hoshiarpur, Punjab 146001</p>
                         <p class="aa-product-descrip">Rating by Google Users
-                        <div class="aa-product-rating">
-                          4.0
-                          <span class="fa fa-star"></span>
-                          <span class="fa fa-star"></span>
-                          <span class="fa fa-star"></span>
-                          <span class="fa fa-star"></span>
-                          <span class="fa fa-star-o"></span>
-                        </div>
+                          <div class="aa-product-rating">
+                            4.0
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star-o"></span>
+                          </div>
                         </p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/rooms/mundi.jpg" alt="hostel img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
+                      <a class="aa-product-img" href="products/mundi.html"><img src="img/rooms/mundi.jpg" alt="hostel img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Divine Home Mundi Hostel</a></h4>
+                        <h4 class="aa-product-title"><a href="products/mundi.html">Divine Home Mundi Hostel</a></h4>
                         <span class="aa-product-price">Rs. 4900/month</span>
                         <p class="aa-product-descrip">SH22, New Bains Colony, Hoshiarpur, Punjab 146021</p>
                         <p class="aa-product-descrip">Rating by Google Users
@@ -180,16 +164,16 @@
                             <span class="fa fa-star-o"></span>
                             <span class="fa fa-star-o"></span>
                           </div>
-                          </p>
+                        </p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/rooms/aanadpg.jpg" alt="hostel img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Book Now!</a>
+                      <a class="aa-product-img" href="products/aanadpg.html"><img src="img/rooms/aanadpg.jpg" alt="hostel img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Book Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Aanad PG</a></h4>
+                        <h4 class="aa-product-title"><a href="products/aanadpg.html">Aanad PG</a></h4>
                         <span class="aa-product-price">Rs. 2000/month</span>
                         <p class="aa-product-descrip">Hoshiarpur Una Rd, Punjab 146110</p>
                         <p class="aa-product-descrip">Rating by Google Users
@@ -201,7 +185,7 @@
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star-o"></span>
                           </div>
-                          </p>
+                        </p>
                       </figcaption>
                     </figure>                         
                   </li>
@@ -214,10 +198,10 @@
               <div class="aa-sidebar-widget">
                 <h3>Category</h3>
                 <ul class="aa-catg-nav">
-                  <li><a href="#">Stationaries</a></li>
-                  <li><a href="">Electronics</a></li>
-                  <li><a href="">Hostel/PG Rooms</a></li>
-                  <li><a href="">Others</a></li>
+                  <li><a href="stationaries.html">Stationaries</a></li>
+                  <li><a href="electronics.html">Electronics</a></li>
+                  <li><a href="hostelpgrooms.html">Hostel/PG Rooms</a></li>
+                  <li><a href="others.html">Others</a></li>
                 </ul>
               </div>
             </aside>
@@ -226,14 +210,14 @@
       </div>
     </section>
 
-    <!-- Subscribe section -->
+    <!-- Subscribe Section -->
     <section id="aa-subscribe">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="aa-subscribe-area">
               <h3>Subscribe to College Magazine </h3>
-              <p>Proud to collaborate with PU!</p>
+              <p>Proud to Collaborate with PU!</p>
               <form action="" class="aa-subscribe-form">
                 <input type="email" name="" id="" placeholder="Enter your Email">
                 <input type="submit" value="Subscribe">
@@ -244,7 +228,7 @@
       </div>
     </section>
 
-    <!-- footer -->  
+    <!-- Footer -->  
     <footer id="aa-footer">
       <div class="aa-footer-top">
         <div class="container">
@@ -256,10 +240,10 @@
                     <div class="aa-footer-widget">
                       <h3>Main Menu</h3>
                       <ul class="aa-footer-nav">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Our Products</a></li>
-                        <li><a href="#">Donate Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="hostelpgrooms.html">Our Products</a></li>
+                        <li><a href="selldonate.html">Donate Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
                   </div>
@@ -276,7 +260,7 @@
                           <a href="#"><span class="fa fa-facebook"></span></a>
                           <a href="#"><span class="fa fa-twitter"></span></a>
                           <a href="#"><span class="fa fa-google-plus"></span></a>
-                          <a href="#"><span class="fa fa-youtube"></span></a>
+                          <a href="#"><span class="fa fa-instagram"></span></a>
                         </div>
                       </div>
                     </div>
@@ -317,6 +301,5 @@
     <script type="text/javascript" src="js/slick.js"></script>
     <script type="text/javascript" src="js/nouislider.js"></script>
     <script src="js/custom.js"></script> 
-  
   </body>
 </html>
