--- a/others.html
+++ b/others.html
@@ -19,8 +19,8 @@
   </head>
   
   <body class="productPage">  
-    <!-- wpf loader Two -->
 
+    <!-- wpf Loader Two -->
     <div id="wpf-loader-two">          
       <div class="wpf-loader-two-inner">
         <span>Loading</span>
@@ -30,26 +30,19 @@
     <!-- SCROLL TOP BUTTON -->
     <a class="scrollToTop" href="#"><i class="fa fa-chevron-up"></i></a>
 
-
-
     <!-- Start header section -->
     <header id="aa-header">
-
-      <!-- start header bottom  -->
       <div class="aa-header-bottom">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
               <div class="aa-header-bottom-area">
-                <!-- logo  -->
                 <div class="aa-logo">
                   <a href="index.html">
                     <span class="fa fa-shopping-cart"></span>
                     <p>College<strong>Adda</strong> <span>Yeh Hai College ki Dukaan!</span></p>
                   </a>
                 </div>
-
-                <!-- search box -->
                 <div class="aa-search-box">
                   <form action="">
                     <input type="text" name="" id="" placeholder="Search Here! ">
@@ -63,12 +56,10 @@
       </div>
     </header>
 
-    <!-- menu -->
+    <!-- Menu -->
     <section id="menu">
       <div class="container">
         <div class="menu-area">
-          
-          <!-- Navbar -->
           <div class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -81,13 +72,13 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Stationaries </a></li>
-                <li><a href="#">Electronics </a></li>
-                <li><a href="#">Hostel/PG Rooms </a></li>
-                <li><a href="#">Others </a></li>           
+                <li><a href="stationaries.html">Stationaries </a></li>
+                <li><a href="electronics.html">Electronics </a></li>
+                <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
+                <li><a href="others.html">Others </a></li>           
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Login </a></li>
-                <li><a href="#">Sell/Donate </a></li>
+                <li><a href="login.html">Login </a></li>
+                <li><a href="selldonate.html">Sell/Donate </a></li>
               </ul>
             </div>
           </div>
@@ -95,19 +86,12 @@
       </div>
     </section>
    
-    <!-- catg header banner section -->
+    <!-- Catg Header Banner Section -->
     <section id="aa-catg-head-banner">
-      <img src="img/others/othersbanner.jpg" alt="fashion img">
-      <div class="aa-catg-head-banner-area">
-        <div class="container">
-          <div class="aa-catg-head-banner-content">
-            <h2>Others</h2>
-          </div>
-        </div>
-      </div>
+      <img src="img/othersbanner.jpg" alt="banner img">
     </section>
 
-    <!-- product category -->
+    <!-- Product Category -->
     <section id="aa-product-category">
       <div class="container">
         <div class="row">
@@ -123,66 +107,44 @@
                 <ul class="list aa-product-catg">
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-1.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">This is Title</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <span class="aa-product-price">Rs. 100</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-2.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span>
+                        <span class="aa-product-price">Rs. 100</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-3.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <span class="aa-product-price">Rs. 100</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-4.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
-                      </figcaption>
-                    </figure>                          
-                  </li>
-                  <li>
-                    <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-5.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
-                      <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
-                      </figcaption>
-                    </figure>                 
-                  </li>
-                  <li>
-                    <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-6.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
-                      <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <span class="aa-product-price">Rs. 100</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                          
@@ -196,10 +158,10 @@
               <div class="aa-sidebar-widget">
                 <h3>Category</h3>
                 <ul class="aa-catg-nav">
-                  <li><a href="#">Stationaries</a></li>
-                  <li><a href="">Electronics</a></li>
-                  <li><a href="">Hostel/PG Rooms</a></li>
-                  <li><a href="">Others</a></li>
+                  <li><a href="stationaries.html">Stationaries</a></li>
+                  <li><a href="electronics.html">Electronics</a></li>
+                  <li><a href="hostelpgrooms.html">Hostel/PG Rooms</a></li>
+                  <li><a href="others.html">Others</a></li>
                 </ul>
               </div>
             </aside>
@@ -208,14 +170,14 @@
       </div>
     </section>
 
-    <!-- Subscribe section -->
+    <!-- Subscribe Section -->
     <section id="aa-subscribe">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="aa-subscribe-area">
               <h3>Subscribe to College Magazine </h3>
-              <p>Proud to collaborate with PU!</p>
+              <p>Proud to Collaborate with PU!</p>
               <form action="" class="aa-subscribe-form">
                 <input type="email" name="" id="" placeholder="Enter your Email">
                 <input type="submit" value="Subscribe">
@@ -238,10 +200,10 @@
                     <div class="aa-footer-widget">
                       <h3>Main Menu</h3>
                       <ul class="aa-footer-nav">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Our Products</a></li>
-                        <li><a href="#">Donate Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="others.html">Our Products</a></li>
+                        <li><a href="selldonate.html">Donate Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
                   </div>
@@ -250,15 +212,15 @@
                       <div class="aa-footer-widget">
                         <h3>Contact Us</h3>
                         <address>
-                        <p> PUSSGRC, Hoshiarpur, India</p>
-                        <p><span class="fa fa-phone"></span>+91-1234567890</p>
-                        <p><span class="fa fa-envelope"></span>collegeadda@gmail.com</p>
+                          <p> PUSSGRC, Hoshiarpur, India</p>
+                          <p><span class="fa fa-phone"></span>+91-1234567890</p>
+                          <p><span class="fa fa-envelope"></span>collegeadda@gmail.com</p>
                         </address>
                         <div class="aa-footer-social">
                           <a href="#"><span class="fa fa-facebook"></span></a>
                           <a href="#"><span class="fa fa-twitter"></span></a>
                           <a href="#"><span class="fa fa-google-plus"></span></a>
-                          <a href="#"><span class="fa fa-youtube"></span></a>
+                          <a href="#"><span class="fa fa-instagram"></span></a>
                         </div>
                       </div>
                     </div>
@@ -299,6 +261,5 @@
     <script type="text/javascript" src="js/slick.js"></script>
     <script type="text/javascript" src="js/nouislider.js"></script>
     <script src="js/custom.js"></script> 
-  
   </body>
 </html>
