--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </header>
   
-    <!-- menu -->
+    <!-- Menu -->
     <section id="menu">
       <div class="container">
         <div class="menu-area">
