linking and editing

--- a/products/aanadpg.html
+++ b/products/aanadpg.html
@@ -108,11 +108,11 @@
                       <h3>Aanad PG</h3>
                       <div class="aa-price-block">
                         <span class="aa-product-view-price">2000/month</span>
-                        <p class="aa-product-avilability">Avilability:   <span>2 Rooms</span></p>
+                        <p class="aa-product-avilability">Avilability:  &nbsp;&nbsp; <span>2 Rooms</span></p>
                         <ul>
-                        <li>Address:    Hoshiarpur Una Rd, Punjab 146110</li>
-                        <li>Owner:   Mr. Chadda</li>
-                        <li>Phone No.:   +91-5463774567</li>
+                        <li>Address:    &nbsp;&nbsp;Hoshiarpur Una Rd, Punjab 146110</li>
+                        <li>Owner:   &nbsp;&nbsp;Mr. Chadda</li>
+                        <li>Phone No.:   &nbsp;&nbsp;+91-5463774567</li>
                       </ul>
                       </div>
                       <div class="aa-prod-quantity">
