--- a/products/asusmobile.html
+++ b/products/asusmobile.html
@@ -110,10 +110,10 @@
                         <span class="aa-product-view-price">Rs 5000</span>
                       </div>
                       <ul>
-                        <li class="aa-product-avilability">Availability:   <span>In stock</span></li>
-                        <li class="aa-product-avilability">Owner:   <span>Raushan Kumar Mishra</span></li>
-                        <li class="aa-product-avilability">Branch:   <span>CSE(2ND SEM)</span></li>
-                        <li class="aa-product-avilability">Contact:   <span>9702492199</span></li>
+                        <li class="aa-product-avilability">Availability:   &nbsp;&nbsp;<span>In stock</span></li>
+                        <li class="aa-product-avilability">Owner:   &nbsp;&nbsp;<span>Raushan Kumar Mishra</span></li>
+                        <li class="aa-product-avilability">Branch:   &nbsp;&nbsp;<span>CSE(2ND SEM)</span></li>
+                        <li class="aa-product-avilability">Contact:   &nbsp;&nbsp;<span>9702492199</span></li>
                       </ul>
                       <div class="aa-prod-quantity">
                         <p class="aa-prod-category">
