--- a/products/mundi.html
+++ b/products/mundi.html
@@ -108,11 +108,11 @@
                       <h3>Divine Home Mundi Hostel</h3>
                       <div class="aa-price-block">
                         <span class="aa-product-view-price">4900/month</span>
-                        <p class="aa-product-avilability">Avilability:    <span>20 Rooms</span></p>
+                        <p class="aa-product-avilability">Avilability:    &nbsp;&nbsp;<span>20 Rooms</span></p>
                         <ul>
-                          <li>Address:   SH22, New Bains Colony, Hoshiarpur, Punjab 146021</li>
-                          <li>Owner:   Mr. Talwar</li>
-                          <li>Phone No.:   +91-5463775412</li>
+                          <li>Address:   &nbsp;&nbsp;SH22, New Bains Colony, Hoshiarpur, Punjab 146021</li>
+                          <li>Owner:   &nbsp;&nbsp;Mr. Talwar</li>
+                          <li>Phone No.:   &nbsp;&nbsp;+91-5463775412</li>
                         </ul>
                       </div>
                       <div class="aa-prod-quantity">
