--- a/products/shivalikpg.html
+++ b/products/shivalikpg.html
@@ -108,11 +108,11 @@
                       <h3>Shivalik PG Rooms</h3>
                       <div class="aa-price-block">
                         <span class="aa-product-view-price">4900/month</span>
-                        <p class="aa-product-avilability">Avilability:   <span>6 Rooms</span></p>
+                        <p class="aa-product-avilability">Avilability:   &nbsp;&nbsp;<span>6 Rooms</span></p>
                         <ul>
-                          <li>Address:   Allahabad, Bajwara, Nandan, Hoshiarpur, Punjab 146021</li>
-                          <li>Owner:   Mr. Singh</li>
-                          <li>Phone No.:   +91-5463455473</li>
+                          <li>Address:   &nbsp;&nbsp;Allahabad, Bajwara, Nandan, Hoshiarpur, Punjab 146021</li>
+                          <li>Owner:   &nbsp;&nbsp;Mr. Singh</li>
+                          <li>Phone No.:   &nbsp;&nbsp;+91-5463455473</li>
                         </ul>
                       </div>
                       <div class="aa-prod-quantity">
