--- a/products/c++.html
+++ b/products/c++.html
@@ -109,10 +109,10 @@
                       <div class="aa-price-block">
                         <span class="aa-product-view-price">Rs 150</span>
                         <ul>
-                          <li class="aa-product-avilability">Availability:   <span>In stock</span></li>
-                          <li class="aa-product-avilability">Owner:   <span>Raushan Kumar Mishra</span></li>
-                          <li class="aa-product-avilability">Branch:   <span>CSE(2ND SEM)</span></li>
-                          <li class="aa-product-avilability">Contact:   <span>7004631061</span></li>
+                          <li class="aa-product-avilability">Availability:   &nbsp;&nbsp;<span>In stock</span></li>
+                          <li class="aa-product-avilability">Owner:   &nbsp;&nbsp;<span>Raushan Kumar Mishra</span></li>
+                          <li class="aa-product-avilability">Branch:   &nbsp;&nbsp;<span>CSE(2ND SEM)</span></li>
+                          <li class="aa-product-avilability">Contact:   &nbsp;&nbsp;<span>7004631061</span></li>
                         </ul>
                         <p>Best Book for C++ Programing Fundamentals.</p>
                         <div class="aa-prod-quantity">
