--- a/products/catalysisnotes.html
+++ b/products/catalysisnotes.html
@@ -108,10 +108,10 @@
                       <div class="aa-price-block">
                         <span class="aa-product-view-price">Rs 15</span>
                         <ul>
-                          <li class="aa-product-avilability">Availability:   <span>In stock</span></li>
-                          <li class="aa-product-avilability">Owner:   <span>Sanjeev Kumar</span></li>
-                          <li class="aa-product-avilability">Branch:   <span>CSE(2ND SEM)</span></li>
-                          <li class="aa-product-avilability">Contact:   <span>7004631061</span></li>
+                          <li class="aa-product-avilability">Availability:   &nbsp;&nbsp;<span>In stock</span></li>
+                          <li class="aa-product-avilability">Owner:   &nbsp;&nbsp;<span>Sanjeev Kumar</span></li>
+                          <li class="aa-product-avilability">Branch:   &nbsp;&nbsp;<span>CSE(2ND SEM)</span></li>
+                          <li class="aa-product-avilability">Contact:   &nbsp;&nbsp;<span>7004631061</span></li>
                         </ul>
                       </div>
                       <p>Notes of Catalysis helps the engineeering student in the chemistry subject.</p>
