--- a/products/polymernotes.html
+++ b/products/polymernotes.html
@@ -109,10 +109,10 @@
                       <div class="aa-price-block">
                         <span class="aa-product-view-price">Rs 13</span>
                         <ul>
-                          <li class="aa-product-avilability">Availability:   <span>In stock</span></li>
-                          <li class="aa-product-avilability">Owner:   <span>Nikhil Rathoure</span></li>
-                          <li class="aa-product-avilability">Branch:   <span>CSE(2ND SEM)</span></li>
-                          <li class="aa-product-avilability">Contact:    <span>9709892199</span></li>
+                          <li class="aa-product-avilability">Availability:   &nbsp;&nbsp;<span>In stock</span></li>
+                          <li class="aa-product-avilability">Owner:   &nbsp;&nbsp;<span>Nikhil Rathoure</span></li>
+                          <li class="aa-product-avilability">Branch:   &nbsp;&nbsp;<span>CSE(2ND SEM)</span></li>
+                          <li class="aa-product-avilability">Contact:    &nbsp;&nbsp;<span>9709892199</span></li>
                         </ul>
                       </div>
                       <p>Polymers comes under Organic Chemistry in Engineering Chemistry.</p>
