--- a/products/saharapg.html
+++ b/products/saharapg.html
@@ -108,11 +108,11 @@
                       <h3>Sahara PG Rooms</h3>
                       <div class="aa-price-block">
                         <span class="aa-product-view-price">5500/month</span>
-                        <p class="aa-product-avilability">Avilability:   <span>4 Rooms</span></p>
+                        <p class="aa-product-avilability">Avilability:   &nbsp;&nbsp;<span>4 Rooms</span></p>
                         <ul>
-                          <li>Address:   Main Una Road, Nandan Bajwara Road, Nandan, Hoshiarpur, Punjab 146001</li>
-                          <li>Owner:   Mr. Tiwari</li>
-                          <li>Phone No.:   +91-5460192573</li>
+                          <li>Address:   &nbsp;&nbsp;Main Una Road, Nandan Bajwara Road, Nandan, Hoshiarpur, Punjab 146001</li>
+                          <li>Owner:   &nbsp;&nbsp;Mr. Tiwari</li>
+                          <li>Phone No.:   &nbsp;&nbsp;+91-5460192573</li>
                         </ul>
                       </div>
                       <div class="aa-prod-quantity">
