--- a/index.html
+++ b/index.html
@@ -17,8 +17,36 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   </head>
+  
+  <style>
+    .typewriter h1 {
+    color: black;
+    font-family: monospace;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(30, end),
+      blink-caret .5s step-end infinite;
+    }
 
+    /* The typing effect */
+    @keyframes typing {
+      from { width: 0 }
+    to { width: 100% }
+    }
+
+    /* The typewriter cursor effect */
+    @keyframes blink-caret {
+      from, to { border-color: transparent }
+      50% { border-color: orange }
+    }
+
+  </style>
   <body> 
+
     <!-- wpf Loader Two -->
     <div id="wpf-loader-two">          
       <div class="wpf-loader-two-inner">
@@ -84,6 +112,10 @@
         </div>       
       </div>
     </section>
+
+    <div class="typewriter">
+      <h1>The cat and the hat.</h1>
+    </div>
 
     <!-- Start Slider -->
     <section id="aa-slider">
@@ -505,5 +537,13 @@
     <script type="text/javascript" src="js/slick.js"></script>
     <script type="text/javascript" src="js/nouislider.js"></script>
     <script src="js/custom.js"></script> 
+    <!-- <script src="js/typed.js"></script>
+    <script>
+      var typed = new Typed('#texttyping', {
+        strings: ["swarggfgjk"],
+        typeSpeed: 30
+      });
+    </script> -->
+
   </body>
 </html>
